fix: 1.67 button being hidden behind footer

--- a/src/ui/containers/Connect/index.module.scss
+++ b/src/ui/containers/Connect/index.module.scss
@@ -1,6 +1,8 @@
 .root {
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+  padding-bottom: 60px;
 
   .itemWrapper {
     margin: 6px 0;
@@ -16,7 +18,6 @@
       line-height: 16px;
       color: #fff;
     }
-
   }
 
   .cardWrapper {
@@ -53,7 +54,7 @@
             padding: 20px 24px;
             color: #fff;
             &::placeholder {
-              color: rgba(255, 255, 255, 0.35)
+              color: rgba(255, 255, 255, 0.35);
             }
           }
         }
